labs/q12/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    app.kubernetes.io/component: mysql
    app.kubernetes.io/instance: mysql
  name: mysql
  namespace: network-debug
spec:
  clusterIP: 10.217.5.204
  clusterIPs:
  - 10.217.5.204
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    deployment: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
